cmake_minimum_required (VERSION 3.12)
project(lwip CXX C)
if(NOT LWIP_STRATIFYOS_PATH)
	message(FATAL_ERROR "LWIP_STRATIFYOS_PATH must be set")
endif()
if(NOT LWIP_CONFIG_PATH)
	message(FATAL_ERROR "LWIP_CONFIG_PATH needs to be set to lwipopts.h directory")
endif()
cmsdk2_add_library(
	NAME ${PROJECT_NAME}
	CONFIG release
	ARCH ${CMSDK_ARCH}
	TARGET RELEASE_TARGET)
set(LWIP_VERSION "2.1.2")
cmsdk2_add_sources(
	TARGET ${RELEASE_TARGET}
	VISIBILITY PRIVATE
	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src)
cmsdk2_add_sources(
	TARGET ${RELEASE_TARGET}
	VISIBILITY PRIVATE
	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_sources(${RELEASE_TARGET}
	PRIVATE
	${LWIP_CONFIG_PATH}/lwipopts.h
	${INTERFACE_SOURCES}
	${PRIVATE_SOURCES}
	${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.cmake)
target_include_directories(${RELEASE_TARGET}
	PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/lwip-${LWIP_VERSION}/src/include>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<BUILD_INTERFACE:${LWIP_STRATIFYOS_PATH}>
	$<BUILD_INTERFACE:${LWIP_CONFIG_PATH}>)
target_compile_options(${RELEASE_TARGET} PUBLIC -Os)
cmsdk2_add_library(
	NAME ${PROJECT_NAME}
	CONFIG debug
	ARCH ${CMSDK_ARCH}
	TARGET DEBUG_TARGET)
cmsdk2_copy_target(
	SOURCE ${RELEASE_TARGET}
	DESTINATION ${DEBUG_TARGET})
target_compile_options(${DEBUG_TARGET} PUBLIC ${API_PUBLIC_DEBUG_COMPILE_OPTIONS})
set(DEPENDENCIES StratifyOS_sys)
cmsdk2_library_add_dependencies(
	TARGET ${DEBUG_TARGET}
	DEPENDENCIES ${DEPENDENCIES})
cmsdk2_library_add_dependencies(
	TARGET ${RELEASE_TARGET}
	DEPENDENCIES ${DEPENDENCIES})
install(DIRECTORY include/
	DESTINATION include/${PROJECT_NAME}
	PATTERN CMakelists.txt EXCLUDE)
install(DIRECTORY lwip-${LWIP_VERSION}/src/include/lwip/
	DESTINATION include/${PROJECT_NAME}
	PATTERN CMakelists.txt EXCLUDE)
install(FILES ${PROJECT_NAME}.cmake
	DESTINATION ${CMSDK_LOCAL_PATH}/cmake/targets)

